upgrade version slidev

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.51.0-beta.4",
+    "@slidev/cli": "51.8.0",
     "@slidev/theme-apple-basic": "^0.25.1",
     "@slidev/theme-bricks": "^0.25.0",
     "@slidev/theme-default": "latest",
